<resources>
    <string name="app_name">AppPrestamos</string>

    <!-- Main -->
    <string name="titulo">App de Prestamos</string>
    <string name="login_titulo">Inicio de Sesión</string>
    <string name="imagen_desc">Usuario_Imagen</string>
    <string name="txtUsuario">Usuario: </string>
    <string name="txtPass">Contraseña: </string>
    <string name="hintUsuario">Usuario </string>
    <string name="hintContraseña">Contraseña </string>
    <string name="btnLogin"> Entrar </string>
    <!-- -->

    <!-- ListaPrestamos -->
    <!-- <string name="txtTitulo">"Lista de Prestamos"</string> -->
    <string name="btnNuevoPrestamo">Nuevo</string>
    <string name="txtDesc">Descripcion</string>
    <string name="txtMonto">Monto</string>
    <string name="txtFecha">Fec. de Pago</string>
    <string name="hintDesc">Descripcion</string>
    <string name="hintMonto">0.0</string>
    <string name="hintFecha">dd/mm/yy</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>

    <!-- DetallePrestamos -->
    <string name="txt_titulo">Titulo</string>
    <string name="txt_monto">Monto: </string>
    <string name="txt_fecha_prestamo">Fecha de prestamo: </string>
    <string name="txt_fecha_cobro">Fecha de cobro: </string>
    <string name="txt_imagen">imagen </string>
   <!-- <string name="btnCancelar">Cancelar</string> -->

    <!--  -->

    <!--  -->
    <string name="title_activity_login">Cancelar</string>
    <string name="prompt_email">Cancelar</string>
    <string name="prompt_password">Cancelar</string>
    <string name="action_sign_in_short">Cancelar</string>
    <string name="action_sign_in">Cancelar</string>



</resources>